# bevy

.github/workflows/: action-on-PR-labeled.yml
assets/shaders/: array_texture.wgsl
crates/bevy_error/: Cargo.toml
crates/bevy_error/macros/: Cargo.toml
crates/bevy_error/macros/src/: advice.rs  lib.rs
crates/bevy_error/src/: lib.rs
crates/bevy_error/tests/: test_derive.rs
crates/bevy_pbr/src/: extended_material.rs  lib.rs  material.rs  wireframe.rs
crates/bevy_pbr/src/prepass/: mod.rs  prepass.wgsl  prepass_io.wgsl
crates/bevy_pbr/src/render/: forward_io.wgsl  light.rs  mesh.rs  mesh.wgsl  mesh_types.wgsl  pbr_bindings.wgsl  pbr_fragment.wgsl  pbr_functions.wgsl  pbr_prepass.wgsl
crates/bevy_render/macros/src/: as_bind_group.rs
crates/bevy_render/src/render_resource/: batched_uniform_buffer.rs  bind_group.rs  bind_group_entries.rs  gpu_array_buffer.rs  storage_buffer.rs  uniform_buffer.rs
crates/bevy_render/src/view/: mod.rs  view.wgsl
crates/bevy_sprite/src/mesh2d/: color_material.rs  color_material.wgsl  material.rs  mesh.rs
examples/2d/: mesh2d_manual.rs
release-content/release-notes/: example.md
