[package]
name = "bevy_error"
version = "0.15.0-dev"
edition = "2021"
description = "Provides error reporting for the bevy Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_error_macros = { path = "macros", version = "0.15.0-dev" }
backtrace = { version = "0.3", optional = true }
tracing-error = { version = "0.2", optional = true }

[dev-dependencies]
thiserror = "2.0"

[features]
default = [ "std", "backtrace", "trace" ]
std = [ "backtrace?/std" ]

backtrace = [ "dep:backtrace" ]
trace = [ "std", "dep:tracing-error" ]

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options"]
all-features = true
